<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductActivity">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/img"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:textSize="21sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                tools:text="Product title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/price"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/purple_700"
                android:layout_marginBottom="10dp"
                tools:text="$149.90"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/description"
                tools:text="Here goes the description..."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/decrease"
                    android:text="-"
                    android:textSize="20sp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/quantity"
                    android:layout_margin="10dp"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    tools:text="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/increase"
                    android:text="+"
                    android:textSize="20sp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/actionLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:contentPadding="10dp">

        <Button
            android:id="@+id/total"
            tools:text="0.0"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>